--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #dbf0ff;
 }
@@ -8,16 +7,16 @@ header {
   background-color: transparent;
 }
 
-
 header .logo {
   object-fit: cover;
 }
 
 header .avt img {
-  height: 60px;
-  width: 60px;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
   object-fit: cover;
+  background-color: #fff;
 }
 
 header .user {
